--- a/public/css/app.css
+++ b/public/css/app.css
@@ -44,3 +44,17 @@ section.hero {
 section.cart {
   background: #f8f8f8;
 }
+section.cart .amount {
+  color: #fe5f1e;
+}
+
+section.login {
+  background: #f8f8f8;
+  min-height: calc(100vh - 90px);
+}
+section.login a {
+  color: #fe5f1e;
+}
+section.login a:hover {
+  color: #b23301;
+}
