--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -45,4 +45,19 @@ section.hero {
 
 section.cart {
   background: $secondary;
+  .amount {
+    color: $primary;
+  }
+}
+
+section.login {
+  background: $secondary;
+  min-height: calc(100vh - 90px);
+
+  a {
+    color: $primary;
+    &:hover {
+      color: $primary-hover;
+    }
+  }
 }
