--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,6 @@
 @import "./variables";
+@import "~noty/src/noty.scss";
+@import "~noty/src/themes/mint.scss";
 
 body {
   font-family: "Lato", sans-serif;
@@ -33,6 +35,10 @@ section.hero {
     border-color: $pure;
     color: $pure;
   }
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .btn-primary {
@@ -60,4 +66,9 @@ section.login {
       color: $primary-hover;
     }
   }
+}
+
+.noty_theme__mint {
+  border-radius: 50px !important;
+  padding-left: 8px !important;
 }
