--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 </head>
 
 <body>
@@ -44,6 +45,7 @@
    </nav>
    
    <%- body %>
-    <script src="/js/app.js"></script>
+   <script src="/socket.io/socket.io.js"></script>
+   <script src="/js/app.js"></script>
 </body>
 </html>
