--- a/resources/views/auth/resetPassword.ejs
+++ b/resources/views/auth/resetPassword.ejs
@@ -1,28 +1,12 @@
-<section class="login flex justify-center pt-20">
+<section class="login flex justify-center pt-24">
     <div class="w-full max-w-xs">
-        <form action="/register" method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <form action="/reset-password/<%= messages.token %>" method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
           <% if(messages.error) {%> 
           <span class="text-red-500 text-sm"><%= messages.error %></span>
           <% } %>  
           <% if(messages.success) {%> 
             <span class="msg text-green-500 text-sm"><%= messages.success %></span>
             <% } %> 
-          <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-                  Name
-                </label>
-                <input
-                 name="name" value="<%= messages.name %>" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                  id="name" type="text" placeholder="Enter your name">
-              </div>
-
-            <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-              Email
-            </label>
-            <input name="email"  value="<%= messages.email %>" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-             id="email" type="email" placeholder="Enter your email">
-          </div>
           <div class="mb-6">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
               Password
@@ -42,13 +26,7 @@
           <div class="flex items-center justify-between">
             <button id="submit" class="btn-primary rounded-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
              type="submit">
-              Register
-            </button>
-            <a class="inline-block align-baseline font-bold text-sm" 
-            href="/login">
-              Already have account?
-            </a>
-          </div>
+              submit
         </form>
       </div>
 </section>
