--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -20,6 +20,7 @@
             <input name="password" class="shadow appearance-none border  rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
              id="password" type="password" placeholder="******************">
           </div>
+          <p class="text-green-600 text-xs italic mb-2">for Admin access email: admin@gmail.com password: admin</p>
           <div class="flex items-center justify-between">
             <button class="btn-primary rounded-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit" >
               Log in
